vyne-query-service/src/main/web/src/app/cask-viewer/cask-viewer.component.scss
@import "src/theme";
@import "src/toolbar";

:host {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.title-bar {
  background-color: $light-purple-grey;
  display: flex;
  h4 {
    padding: 0;
    margin: 0;
    flex-grow: 1;
  }
  button {
    width: unset !important;
    height: unset !important;
    line-height: unset !important;
  }
  padding: 10px;
}

.list-container {
  width: 400px;
  height: 100%;
  background-color: $light-purple-grey;
  border-right: 1px solid $light-purple-grey-300;
  display: flex;
  flex-direction: column;

  .cask-list {
    flex-grow: 1;
    overflow: auto;
  }
}

.container {
  display: flex;
  flex-grow: 1;
  height: 10px;

  .results-section {
    flex-grow: 1;
  }
}

